@@ -3,6 +3,7 @@ Current
 - Fixed #31232 - Error adding a key to project in a SELECT_NAVIGATIONAL sentence
 - Fixed #31233 - Error using $expand=*
 - Fixed #31264 - Avoid queries inside a rowMap method (e.g. DESC COMMANDS)
+- Fixed #31500 - The "server.pageSize" parameter is acting as an upper limit when it is used the "odata.maxpagesize" preference in the HTTP "Prefer" header.
 
 20170202
 --------
